unpackaged/main/default/objects/CampaignMember/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), TEXT(Contact.Account.Type), 
IF(NOT(ISBLANK(AccountId)),TEXT(Account.Type),&#39;&#39;))</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>