unpackaged/main/default/objects/CampaignMember/fields/Contact_Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Employment_Status__c</fullName>
    <description>Contact or Lead Employment Status</description>
    <formula>IF(NOT(ISBLANK(ContactId)),TEXT(Contact.Employment_Status__c),TEXT(Lead.Employment_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment Status</label>
    <type>Text</type>
</CustomField>