unpackaged/main/default/objects/CampaignMember/fields/Contact_Opted_Out__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opted_Out__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), Contact.Contact_opted_out_of_email_communication__c,Lead.Contact_opted_out_of_email_communication__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opted Out?</label>
    <type>Checkbox</type>
</CustomField>