unpackaged/main/default/objects/CampaignMember/fields/Contact_Opted_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Opted_Out_Date__c</fullName>
    <description>Contact or Lead Opted Out Date</description>
    <formula>IF(NOT(ISBLANK(ContactId)),Contact.Date_opted_out__c,Lead.Date_opted_out__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opted Out Date</label>
    <type>Date</type>
</CustomField>