unpackaged/main/default/objects/CampaignMember/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)),TEXT(Contact.Account.Vertical_Market__c),
IF(NOT(ISBLANK(LeadId)),TEXT(Lead.Vertical_Market__c),
TEXT(Account.Vertical_Market__c)))</formula>
    <label>Industry/Vertical</label>
    <type>Text</type>
</CustomField>