unpackaged/main/default/objects/CampaignMember/fields/Job_Classification__c.field-meta.xml
<CustomField>
    <fullName>Job_Classification__c</fullName>
    <description>Job Classification of Contact</description>
    <formula>IF(NOT(ISBLANK(ContactId)), TEXT(Contact.Job_Classification__c),TEXT(Lead.Job_Classification__c))</formula>
    <inlineHelpText>Job Classification of Contact</inlineHelpText>
    <label>Job Classification</label>
    <type>Text</type>
</CustomField>