unpackaged/main/default/objects/CampaignMember/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <formula>BLANKVALUE(TEXT(Contact.Lifecycle_Stage__c ),TEXT(Lead.Lifecycle_Stage__c))</formula>
    <label>Lifecycle Stage</label>
    <type>Text</type>
</CustomField>