unpackaged/main/default/objects/CampaignMember/fields/MQL_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>MQL_Create_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact.MQL_Create_Date__c)),Contact.MQL_Create_Date__c, Lead.MQL_Create_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MQL Create Date</label>
    <type>Date</type>
</CustomField>