unpackaged/main/default/objects/CampaignMember/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)),Contact.Region__c,
IF(NOT(ISBLANK(LeadId)),TEXT(Lead.Region__c),TEXT(Account.Region__c)
))</formula>
    <label>Region</label>
    <type>Text</type>
</CustomField>