unpackaged/main/default/objects/CampaignMember/fields/SDR_QL_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>SDR_QL_Create_Date__c</fullName>
    <formula>Contact.TQL_Create_Date__c</formula>
    <label>SDR QL Create Date</label>
    <type>Date</type>
</CustomField>