unpackaged/main/default/objects/CampaignMember/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)),TEXT(Contact.Account.T1_Industry__c),TEXT(Lead.T1_Industry__c))</formula>
    <label>Segment</label>
    <type>Text</type>
</CustomField>