unpackaged/main/default/objects/CampaignMember/fields/Special_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirement__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)),Contact.Special_Requirement__c,Lead.Special_Requirement__c)</formula>
    <label>Special Requirement</label>
    <type>Text</type>
</CustomField>