unpackaged/main/default/objects/CampaignMember/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)), TEXT(Contact.Status_Reason__c),TEXT(Lead.Status_Reason__c))</formula>
    <label>Status Reason</label>
    <type>Text</type>
</CustomField>