unpackaged/main/default/objects/CampaignMember/fields/Sub_Segment__c.field-meta.xml
<CustomField>
    <fullName>Sub_Segment__c</fullName>
    <formula>IF(NOT(ISBLANK(ContactId)),TEXT(Contact.Account.Other_Managed_Services__c),TEXT(Lead.Other_Managed_Services__c))</formula>
    <label>Sub Segment</label>
    <type>Text</type>
</CustomField>